// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments only a comment 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = \\"\\") {
    return comment(\` comment\`);
  }
}"
`;

exports[`comments properly handle comments 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>hello <!-- comment-->owl</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`comments properly handle comments between t-if/t-else 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block3 = createBlock(\`<div>
 <block-child-0/><block-child-1/>
 </div>\`);
  let block4 = createBlock(\`<span>true</span>\`);
  let block5 = createBlock(\`<span>owl</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    let b4,b5;
    if (true) {
      b4 = block4();
    } else {
      b5 = block5();
    }
    const b3 = block3([], [b4, b5]);
    return multi([b2, b3]);
  }
}"
`;
